k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-etablissement-service
spec:
  selector:
    app: gestion-etablissement
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
